welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: ')' expected but 'else' found.
	else { return false}
        ^loneTeen:7: error: Unmatched closing brace '}' ignored here
 }
 ^